@@ -18,7 +18,6 @@ t/99_errors.t
 t/pod.t
 
 # Module::Install extensions
-inc/File/Slurp.pm
 inc/Module/AutoInstall.pm
 inc/Module/Install.pm
 inc/Module/Install/AutoLicense.pm
@@ -34,5 +33,9 @@ inc/Module/Install/Makefile.pm
 inc/Module/Install/Metadata.pm
 inc/Module/Install/Win32.pm
 inc/Module/Install/WriteAll.pm
+inc/Module/Install/PRIVATE/Enable_Verbose_CPAN_Testing.pm
+
+# Private Module::Install extensions
+private-lib/Module/Install/PRIVATE/Enable_Verbose_CPAN_Testing.pm
 
 META.yml
