@@ -2,17 +2,15 @@
 
 use strict;
 
+# For PRIVATE Module::Install extensions
+use lib 'private-lib';
+
 use inc::Module::Install;
-use File::Slurp;
 
 all_from('lib/Benchmark/Timer.pm');
 
 auto_set_bugtracker;
 githubmeta;
-
-include(
-  'File::Slurp' => 0,
-);
 
 requires(
   'Time::HiRes' => 0,
@@ -25,21 +23,11 @@ test_requires(
 check_optional('Statistics::PointEstimation' => 0,
   "Install Statistics::PointEstimation for statistical sampling support\n");
 
-# Module::Install doesn't figure out that Module::Install::CheckOptional needs
-# this. Include it manually.
-include(
-  'Module::AutoInstall' => 0,
-);
-
 no_index('delta.pl');
 
 license 'gpl2';
 auto_license(holder => 'David Coppit');
 
-WriteAll();
+enable_verbose_cpan_testing();
 
-if (auto_tester) {
-  my $code = read_file('Makefile');
-  $code =~ s/TEST_VERBOSE\s*=\s*0/TEST_VERBOSE=1/ or die "Couldn't enable verbose mode in Makefile";
-  write_file('Makefile', $code);
-}
+WriteAll();
