@@ -1,5 +1,7 @@
 Version 0.7106:
 - Clarify licensing terms
+- Move verbose testing to a private module, and implement it in a way that
+  doesn't require editing the Makefile after it is generated.
 
 Version 0.7105: Sun Apr 12 2015
 - Make basic.t 'Nonzero single result' test reliable
